# docker-python-hw

./: .pre-commit-config.yaml  .sample.env  CHANGELOG.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: branch.yml  cron.yml  main.yml  pr.yml  release.yml  tag.yml
app/: main.py  msg.py
tests/: test_main.py
